--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --history-api-fallback",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client"
   },
@@ -32,6 +32,7 @@
     "body-parser": "^1.16.1",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "express-session": "^1.15.1",
     "history": "^4.6.3",
@@ -43,7 +44,9 @@
     "react-router-dom": "^4.2.2",
     "sequelize": "^4.37.5",
     "socket.io": "^2.0.3",
-    "socket.io-client": "^2.1.0"
+    "socket.io-client": "^2.1.0",
+    "style-loader": "^0.20.3",
+    "url-loader": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
